making the site more user friendly

--- a/home.html
+++ b/home.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Michael Matteis</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./projectAnimation.css">
   <link rel="stylesheet" href="home.css">
@@ -32,7 +35,7 @@
     <div id="project3">
       <h5>SQL GUESSING GAME</h5>
       <section>
-        <p>This is a express app that uses a SQL database to store a user and updates their information based on the game</p>
+        <p>This is a express app that uses the MVC pattern and a SQL database to store and update the user's info base on the conditions of the game</p>
         <a href="https://mysqlgamesite-production.up.railway.app/" target="_black">See Project</a>
         <a href="https://github.com/mikematt23/mySqlGAmeSite" target="_blank">See Code</a>
       </section>
