changing the style

--- a/home.html
+++ b/home.html
@@ -19,6 +19,7 @@
     <h2>Michael Matteis</h2>
     <h2>Web Developer</h2>
   </nav>
+  <h2>Greatness From Small Beginnings</h2>
   <div class="buttonHolder">  
     <button id="open">Open Projects</button>
     <button id="close">Close Projects</button>
