changing the style of the page

--- a/home.html
+++ b/home.html
@@ -19,34 +19,33 @@
     <h2>Michael Matteis</h2>
     <h2>Web Developer</h2>
   </nav>
-  <h2>Greatness From Small Beginnings</h2>
+  <h2 class="quote">Greatness From Small Beginnings</h2>
   <div class="buttonHolder">  
     <button id="open">Open Projects</button>
     <button id="close">Close Projects</button>
   </div>
   <section id="projectHolder">
     <div id="project1">
-      <h5>Pig-Latin-Translater</h5>
+      <h5>API</h5>
       <section>
-        <p>This is a basic HTML website that uses javascript to translate a given word or phrase into pig latin</p>
-        <a href="https://steady-frangipane-47c22b.netlify.app" target="_blank">See Project</a>
-        <a href="https://github.com/mikematt23/newPigLatin">See Code</a>
+        <p>This is a cumstom API I created using Express.js and node it allows my front end websites to communicate with database by either store or getting user information. There is no front end for this project</p>
+        <a href="https://github.com/mikematt23/restAPI">See Code</a>
       </section>
     </div>
     <div id="project3">
       <h5>SQL GUESSING GAME</h5>
       <section>
-        <p>This is a express app that uses the MVC pattern and a SQL database to store and update the user's info base on the conditions of the game</p>
-        <a href="https://mysqlgamesite-production.up.railway.app/" target="_black">See Project</a>
-        <a href="https://github.com/mikematt23/mySqlGAmeSite" target="_blank">See Code</a>
+        <p>This is a UI project that use a custom api to update and store user infomation based on the game logic using javascript</p>
+        <a href="https://luminous-pithivier-dd2df3.netlify.app" target="_black">See Project</a>
+        <a href="https://github.com/mikematt23/frontEndGuessingGame" target="_blank">See Code</a>
       </section>
     </div>
     <div id="project4">
-      <h5>Tic tac toe</h5>
+      <h5>React Meals</h5>
       <section>
-        <p>This is a static tic tac toe game that uses object oriented programming</p>
-        <a href="https://glittering-zuccutto-73cdb4.netlify.app/">See Project</a>
-        <a href="https://github.com/mikematt23/ticTacTOe2023">See Code</a>
+        <p>This is a dummy UI that use react functional components and react hooks to update a shopping cart based on user inputs</p>
+        <a href="https://eloquent-pixie-cfa919.netlify.app">See Project</a>
+        <a href="https://github.com/mikematt23/reactMeals">See Code</a>
       </section>
     </div>
   </section>
