adding the right descrietion

--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
     <div id="project1">
       <h5>API</h5>
       <section>
-        <p>This is a cumstom API I created using Express.js and node it allows my front end websites to communicate with database by either store or getting user information. There is no front end for this project</p>
+        <p>This is a cumstom API I created using Express.js and node it allows my front end websites to communicate with a MYSQL database by either store or getting user information. There is no front end for this project</p>
         <a href="https://github.com/mikematt23/restAPI">See Code</a>
       </section>
     </div>
