fixing spelling errors

--- a/home.html
+++ b/home.html
@@ -28,14 +28,14 @@
     <div id="project1">
       <h5>API</h5>
       <section>
-        <p>This is a cumstom API I created using Express.js and node it allows my front end websites to communicate with a MYSQL database by either store or getting user information. There is no front end for this project</p>
+        <p>This is a custom API I created using Express.js and node it allows my front end websites to communicate with a MYSQL database by either store or getting user information. There is no front end for this project</p>
         <a href="https://github.com/mikematt23/restAPI">See Code</a>
       </section>
     </div>
     <div id="project3">
       <h5>SQL GUESSING GAME</h5>
       <section>
-        <p>This is a UI project that use a custom api to update and store user infomation based on the game logic using javascript</p>
+        <p>This is a UI project that use a custom api to update and store user information based on the game logic using javascript</p>
         <a href="https://luminous-pithivier-dd2df3.netlify.app" target="_black">See Project</a>
         <a href="https://github.com/mikematt23/frontEndGuessingGame" target="_blank">See Code</a>
       </section>
